# esc-opportunity-search

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.specify/memory/: constitution.md
deploy/: esc-mcp.service  nginx-esc-mcp.conf
examples/: claude_desktop_config.json  claude_desktop_config_remote.json
specs/001-esc-opportunity-search/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-esc-opportunity-search/checklists/: requirements.md
specs/001-esc-opportunity-search/contracts/: mcp-tools.md
src/esc_opportunity_search/: __init__.py  ingestion.py  models.py  search.py  server.py
tests/fixtures/: esc_api_page1.json  opportunity_page.html
tests/integration/: test_ingestion.py  test_tools.py
